force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/ECT_Shipping_Tracking_Information__c.object-meta.xml
<CustomObject>
    <label>Shipping &amp; Tracking Information</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Shipping &amp; Tracking Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping &amp; Tracking Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>