force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/fields/Delivery_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Service_Name__c</fullName>
    <label>Delivery Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>