force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>