force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/fields/Link_to_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Tracking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link to Tracking</label>
    <length>100</length>
    <type>Text</type>
</CustomField>