force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/fields/Other_Delivery_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Delivery_Service_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Delivery Service Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>