force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ECT_State__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ECT_State__c</referenceTo>
    <relationshipLabel>Shipping &amp; Tracking Information</relationshipLabel>
    <relationshipName>Shipping_Tracking_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>