force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>45</length>
    <type>Text</type>
</CustomField>