force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shipping_Tracking_Information</relationshipName>
    <type>Lookup</type>
</CustomField>