force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Delivery_Service_Name__c</columns>
    <columns>Other_Delivery_Service_Name__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>