force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/listViews/Shipment_Pending.listView-meta.xml
<ListView>
    <fullName>Shipment_Pending</fullName>
    <columns>Timestamp__c</columns>
    <columns>State__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>NAME</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Link_to_Tracking__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Shipment Pending</label>
    <sharedTo>
        <group>ECT_NARA_Super_Users</group>
        <group>ECT_OFR_Legal_Users</group>
    </sharedTo>
</ListView>