force-app/main/default/objects/ECT_Shipping_Tracking_Information__c/listViews/State_Certificate_Shipments.listView-meta.xml
<ListView>
    <fullName>State_Certificate_Shipments</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Link_to_Tracking__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>State Certificate Shipments</label>
    <sharedTo>
        <group>ECT_State_Users</group>
    </sharedTo>
</ListView>